# closedmesh

./: .env.example  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
.cursor/skills/closedmesh-infra/: SKILL.md
.github/workflows/: desktop-release.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/(app)/: page.tsx
app/(app)/chat/: page.tsx
app/(app)/logs/: page.tsx
app/(app)/models/: page.tsx
app/(control)/: layout.tsx
app/(control)/chat/: page.tsx
app/(control)/dashboard/: page.tsx
app/(control)/models/: page.tsx
app/(public)/: HomepageChat.tsx  layout.tsx  page.tsx
app/about/: page.tsx
app/api/: _cors.ts
app/components/: ChatExperience.tsx  ChatMessage.tsx  Header.tsx  Logo.tsx  MeshLiveStatus.tsx  PageHeader.tsx  PublicHeader.tsx  RemoteInstall.tsx  Setup.tsx  Sidebar.tsx  StatusPill.tsx
app/control/: page.tsx
app/download/: page.tsx
app/lib/: model-catalog.ts  node-display-state.ts  runtime-target.ts  use-mesh-status.ts
desktop/: .gitignore  Cargo.toml  README.md  SIDECAR.md  build.rs  package-lock.json  package.json  tauri.conf.json
desktop/macos/: sidecar.entitlements.plist
desktop/scripts/: build.sh  fetch-node.sh  stage-controller.sh  svg-to-png.mjs
desktop/sidecar/: README.md
desktop/src/: main.rs  mesh.rs  sidecar.rs
docs/: heterogeneous-mesh-validation.md
public/: install-desktop.ps1  install-desktop.sh  install.ps1  install.sh
scripts/: build-app-bundle.sh  dev.sh  fix-mesh-now.sh  install-controller.sh  smoke-capability.sh
(+28 files in other folders)
